--- a/Web/HTML/Assignment2/Question2/style4.css
+++ b/Web/HTML/Assignment2/Question2/style4.css
@@ -1,34 +1,66 @@
+/* gives look to header and complete form is placed at center of page */
 body {
-	margin:0 auto;
-	width:700px;
+	position: absolute;
+   	top: 50%;
+    left: 50%;
+	margin-left: -350px;
+    margin-top: -225px;
+	width:700px;height :450px;
 	background:#FFF;
     line-height: 1.5;
     letter-spacing: 1px;
-    font-family: sans-serif;
+    font-family: cursive;
 }
 
+/* properties of header */
 header {
-	margin-top:150px;
-    background: #D8F1DD;
+    background-color: #3E8070;
     height: 65px;
     padding-left: 50px;
     padding-bottom: 25px;
-    color: teal;
-    font-family: sans-serif;
-    //font-size: 30px;
+    color: rgb(247, 247, 247);
     font-weight: bold;
-    border: #5F8C8E solid 2px;
+    border: #2C3F40 solid 2px;
+	box-shadow: 0 0 50px #020D07 inset;
 }
 
+/* defines look of section */
 section {
-	background-color: #DCE2DD;
-	height:400px;
+	background-color: #CCC3A7;
+	height:350px;
+	box-shadow: 0 0 50px #554515 inset;
 }
 
-table td
-{
+/* applies formatting on span containg * depicting compulsory fields*/
+span {
+	color:red;
+}
+
+/* gives width of td of table */
+table td {
 	width:200px;
 }
+
+/* defines look of all textboxes in form */
+table input {
+	border-radius: 4px;
+	border: #3E8070 solid 1px;
+	width:200px;
+}
+
+/* defines look of form */
+#submitForm {
+	width: 150px;
+    height: 30px;
+    background-color: #3E8070;
+    border-radius: 8px;
+    border: black 1px solid;
+    font-size: 18px;
+    color: white;
+	font-family: cursive;
+}
+
+/* aligns footer to correct position */
 footer {
 	background:rgba(234, 253, 208, 0.98);
 	text-align:center;
